--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
+    "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
